2010-10-19  Alexander V. Lukyanov <lav@yars.free.net>

	* CmdExec.cc, CmdExec.h, commands.cc: new CmdExec ctor; `local' builtin.
	* MirrorJob.cc: allow continue of pget.
	* Torrent.cc, Torrent.h: better diag msg; don't show `next tracker in'
	  msg when validating; allow starting of multiple torrents at once;
	  show torrent name in status; add torrent to listener earlier;
	  better handle shutting down of multiple torrents.
	* convert-mozilla-cookies: fix info duplication;
	* pgetJob.cc: save status at the start.

2010-09-09  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc, ftpclass.h: add TVFS support; send path components
	  separately as required by RFC1738 unless TVFS is declared by server.
	* example-cmd.cc: fix assertion failure.

2010-09-01  Alexander V. Lukyanov <lav@yars.free.net>

	* convert-netscape-cookies: add sqlite support.
	* NetAccess.cc: use cached fset.
	* ResMgr.cc: match *.domain.org to domain.org in closure.

2010-08-17  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc: fixed coredump on --log=unopenable-file.
	* FileAccess.cc, ftpclass.cc, Http.cc, LocalAccess.cc: carefully
	  save errno value.

2010-06-10  Alexander V. Lukyanov <lav@yars.free.net>

	* Timer.cc: fixed Reset for timer which have been just Stop()ped.
	* commands.cc: document (repeat) options.

2010-06-09  Alexander V. Lukyanov <lav@yars.free.net>

	* Torrent.cc, Torrent.h: don't try to re-download invalid piece
	  from the same peer; black-list peers with many invalid pieces.

2010-06-09  Claus K. Larsen <ckl@bankdata.dk>

	* xstring.h: include unistd.h to workaround truncate64 problem on aix.

2010-06-04  gabriele balducci <balducci@dschgrazlin2.units.it>

	* ftpclass.cc: fixed a problem with zeroed errno.

2010-06-02  Alexander V. Lukyanov <lav@yars.free.net>

	* CopyJob.cc: use no_status flag.
	* CopyJob.h: (NoStatus) accept optional parameter.
	* OutputJob.cc: pass no_status flag.

2010-05-24  Alexander V. Lukyanov <lav@yars.free.net>
